src/styles/index.scss
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@200;300;400;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  font-family: 'Lato';
  background-color: theme('colors.background');
  transition:
    0.1s ease-out opacity,
    border-width,
    border-color,
    background-color;
}

